Compare: Break out archetype, perks/mods (#10998)

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1047,6 +1047,7 @@
       "MasterworkStat": "Masterwork Stat",
       "MasterworkTier": "Masterwork Tier",
       "ModSlot": "Mod Slot",
+      "Mods": "Mods",
       "Name": "Name",
       "New": "New",
       "Notes": "Notes",
