Show a list of alternate versions of an item in Armory

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -28,6 +28,7 @@
     "WeeklyHeroic": "Weekly Heroic Strike"
   },
   "Armory": {
+    "AlternateItems": "Alternate Versions",
     "Armory": "Armory",
     "NoNotes": "No Notes",
     "OpenInArmory": "view in Armory",
